--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,11 @@
         android:name="org.dieschnittstelle.mobile.android.mediaaccess.MediaAccessRemoteApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" 
+        android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
         <activity
+            android:exported="true"
             android:name=".ItemListActivity"
             android:label="@string/app_name">
             <intent-filter>
@@ -34,6 +36,7 @@
             android:name=".webview.ChromeWebViewItemDetailsActivity"
             android:label="">
         </activity>
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
 
 </manifest>
